[gd_scene load_steps=10 format=3 uid="uid://p8jlq8xdcf0t"]

[ext_resource type="Texture2D" uid="uid://d2fwkm7ofx7tj" path="res://Assets/Buttons and Dialogs/Result-dialog.png" id="1_qvygd"]
[ext_resource type="Script" uid="uid://bd4mgwpnngm2d" path="res://Scenes/Dialogs/result_dialog.gd" id="2_va6yu"]
[ext_resource type="FontFile" uid="uid://c8f1xkqvr2h7a" path="res://Assets/Fonts/Silkscreen-Regular.ttf" id="3_347jp"]
[ext_resource type="FontFile" uid="uid://cbkaala8qo5w5" path="res://Assets/Fonts/Silkscreen-Bold.ttf" id="4_jrslr"]
[ext_resource type="Texture2D" uid="uid://mqa3wwnk2b00" path="res://Assets/Buttons and Dialogs/Button-nextlevel.png" id="5_p5num"]
[ext_resource type="Texture2D" uid="uid://dkhddl4kkxhf2" path="res://Assets/Buttons and Dialogs/Button-tryagain.png" id="6_jrpct"]
[ext_resource type="Script" uid="uid://cym0jqgaabiea" path="res://Scripts/Buttons/try_again_button.gd" id="7_bmjpc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnqyn"]
bg_color = Color(0.870588, 0.847059, 0.435294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.6, 0.654902, 0.364706, 1)
border_blend = true
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdjvi"]
bg_color = Color(0.870588, 0.847059, 0.435294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.919279, 0.504634, 0.38414, 1)
border_blend = true
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[node name="ResultPopUp" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -756.0
offset_top = -413.0
offset_right = 754.0
offset_bottom = 419.0

[node name="DisableBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.383597, 0.383597, 0.383597, 0.184314)

[node name="ResultDialog" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.757
anchor_bottom = 0.668
offset_left = 230.0
offset_top = 142.0
offset_right = 140.93
offset_bottom = 127.224
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_qvygd")
expand_mode = 1
script = ExtResource("2_va6yu")

[node name="HBoxContainer" type="HBoxContainer" parent="ResultDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.079
anchor_top = 0.826
anchor_right = 0.918
anchor_bottom = 0.961
offset_left = -0.266006
offset_top = 0.133972
offset_right = 382.428
offset_bottom = 32.099
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_constants/separation = 90
alignment = 1

[node name="ScoreLabel" type="Label" parent="ResultDialog/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.294118, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_347jp")
theme_override_font_sizes/font_size = 40
text = "Score"

[node name="SuccessLabel" type="Label" parent="ResultDialog/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.294118, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_jrslr")
theme_override_font_sizes/font_size = 40
text = "Success!!!"

[node name="NextLevelButton" type="TextureButton" parent="ResultDialog/HBoxContainer"]
custom_minimum_size = Vector2(450, 30)
layout_mode = 2
texture_normal = ExtResource("5_p5num")
stretch_mode = 5

[node name="TryAgainButton" type="TextureButton" parent="ResultDialog/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
texture_normal = ExtResource("6_jrpct")
stretch_mode = 5
script = ExtResource("7_bmjpc")

[node name="LeftTitleLabel" type="Label" parent="ResultDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.064
anchor_top = 0.081
anchor_right = 0.454
anchor_bottom = 0.186
offset_left = 18.544
offset_top = -5.821
offset_right = 545.484
offset_bottom = 64.374
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.4, 0.294118, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_jrslr")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_gnqyn")
text = "Optimal Solution"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="LeftLabel" type="Label" parent="ResultDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.198
anchor_right = 0.454
anchor_bottom = 0.77
offset_left = 0.435997
offset_top = -0.118004
offset_right = 611.484
offset_bottom = 473.43
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.4, 0.294118, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_347jp")
theme_override_font_sizes/font_size = 55
text = "Left
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
"
autowrap_mode = 3
clip_text = true

[node name="RightTitleLabel" type="Label" parent="ResultDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.554
anchor_top = 0.072
anchor_right = 0.917
anchor_bottom = 0.166
offset_left = 7.08398
offset_top = 0.0479965
offset_right = 562.482
offset_bottom = 76.194
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.4, 0.294118, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_jrslr")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_cdjvi")
text = "Your Solution"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="RightLabel" type="Label" parent="ResultDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.542
anchor_top = 0.205
anchor_right = 0.941
anchor_bottom = 0.769
offset_left = -0.268066
offset_top = 0.0949936
offset_right = 651.186
offset_bottom = 468.971
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.4, 0.294118, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_347jp")
theme_override_font_sizes/font_size = 55
text = "Right
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
"
autowrap_mode = 3
clip_text = true

[connection signal="pressed" from="ResultDialog/HBoxContainer/TryAgainButton" to="ResultDialog/HBoxContainer/TryAgainButton" method="_on_pressed"]
